@@ -204,20 +204,6 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|Bits
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
 name|ToStringUtils
 import|;
 end_import
@@ -429,11 +415,11 @@ name|this
 operator|.
 name|qWeight
 operator|=
-name|q
+name|searcher
 operator|.
 name|createWeight
 argument_list|(
-name|searcher
+name|q
 argument_list|,
 name|needsScores
 argument_list|)
