@@ -80,6 +80,9 @@ Optimizations
 * LUCENE-6756: MatchAllDocsQuery now has a dedicated BulkScorer for better
   performance when used as a top-level query. (Adrien Grand)
 
+* LUCENE-6746: DisjunctionMaxQuery, BoostingQuery and BoostedQuery now create
+  sub weights through IndexSearcher so that they can be cached. (Adrien Grand)
+
 Bug Fixes
 
 * LUCENE-6730: Hyper-parameter c is ignored in term frequency NormalizationH1.
